@@ -144,8 +144,8 @@ static ap_pod_t *pod;
 
 /*
  * The max child slot ever assigned, preserved across restarts.  Necessary
- * to deal with MaxClients changes across SIGWINCH restarts.  We use this
- * value to optimize routines that have to scan the entire scoreboard.
+ * to deal with MaxClients changes across AP_SIG_GRACEFUL restarts.  We 
+ * use this value to optimize routines that have to scan the entire scoreboard.
  */
 int ap_max_daemons_limit = -1;
 server_rec *ap_server_conf;
@@ -435,7 +435,7 @@ static void sig_term(int sig)
     shutdown_pending = 1;
 }
 
-/* restart() is the signal handler for SIGHUP and SIGWINCH
+/* restart() is the signal handler for SIGHUP and AP_SIG_GRACEFUL
  * in the parent process, unless running in ONE_PROCESS mode
  */
 static void restart(int sig)
@@ -445,7 +445,7 @@ static void restart(int sig)
 	return;
     }
     restart_pending = 1;
-    if ((is_graceful = (sig == SIGWINCH))) {
+    if ((is_graceful = (sig == AP_SIG_GRACEFUL))) {
         apr_pool_cleanup_kill(pconf, NULL, ap_cleanup_scoreboard);
     }
 }
@@ -508,14 +508,15 @@ static void set_signals(void)
 	ap_log_error(APLOG_MARK, APLOG_WARNING, errno, ap_server_conf, "sigaction(SIGPIPE)");
 #endif
 
-    /* we want to ignore HUPs and WINCH while we're busy processing one */
+    /* we want to ignore HUPs and AP_SIG_GRACEFUL while we're busy 
+     * processing one */
     sigaddset(&sa.sa_mask, SIGHUP);
-    sigaddset(&sa.sa_mask, SIGWINCH);
+    sigaddset(&sa.sa_mask, AP_SIG_GRACEFUL);
     sa.sa_handler = restart;
     if (sigaction(SIGHUP, &sa, NULL) < 0)
 	ap_log_error(APLOG_MARK, APLOG_WARNING, errno, ap_server_conf, "sigaction(SIGHUP)");
-    if (sigaction(SIGWINCH, &sa, NULL) < 0)
-        ap_log_error(APLOG_MARK, APLOG_WARNING, errno, ap_server_conf, "sigaction(SIGWINCH)");
+    if (sigaction(AP_SIG_GRACEFUL, &sa, NULL) < 0)
+        ap_log_error(APLOG_MARK, APLOG_WARNING, errno, ap_server_conf, "sigaction(" AP_SIG_GRACEFUL_STRING ")");
 #else
     if (!one_process) {
 	apr_signal(SIGSEGV, sig_coredump);
@@ -543,9 +544,9 @@ static void set_signals(void)
 #ifdef SIGHUP
     apr_signal(SIGHUP, restart);
 #endif /* SIGHUP */
-#ifdef SIGWINCH
-    apr_signal(SIGWINCH, restart);
-#endif /* SIGWINCH */
+#ifdef AP_SIG_GRACEFUL
+    apr_signal(AP_SIG_GRACEFUL, restart);
+#endif /* AP_SIG_GRACEFUL */
 #ifdef SIGPIPE
     apr_signal(SIGPIPE, SIG_IGN);
 #endif /* SIGPIPE */
@@ -856,7 +857,7 @@ static int make_child(server_rec *s, int slot)
 
     if (one_process) {
 	apr_signal(SIGHUP, just_die);
-        /* Don't catch SIGWINCH in ONE_PROCESS mode :) */
+        /* Don't catch AP_SIG_GRACEFUL in ONE_PROCESS mode :) */
 	apr_signal(SIGINT, just_die);
 #ifdef SIGQUIT
 	apr_signal(SIGQUIT, SIG_DFL);
@@ -909,10 +910,10 @@ static int make_child(server_rec *s, int slot)
 	 */
 	apr_signal(SIGHUP, just_die);
 	apr_signal(SIGTERM, just_die);
-        /* The child process doesn't do anything for SIGWINCH.  Instead, the
-         * pod is used for signalling graceful restart.
+        /* The child process doesn't do anything for AP_SIG_GRACEFUL.  
+         * Instead, the pod is used for signalling graceful restart.
          */
-        apr_signal(SIGWINCH, SIG_IGN);
+        apr_signal(AP_SIG_GRACEFUL, SIG_IGN);
 	child_main(slot);
     }
 
@@ -1141,7 +1142,7 @@ int ap_mpm_run(apr_pool_t *_pconf, apr_pool_t *plog, server_rec *s)
 
     /* If we're doing a graceful_restart then we're going to see a lot
 	* of children exiting immediately when we get into the main loop
-	* below (because we just sent them SIGWINCH).  This happens pretty
+	* below (because we just sent them AP_SIG_GRACEFUL).  This happens pretty
 	* rapidly... and for each one that exits we'll start a new one until
 	* we reach at least daemons_min_free.  But we may be permitted to
 	* start more than that, so we'll just keep track of how many we're
